@@ -1,4 +1,6 @@
-Thu Jul 28 12:32:42 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Thu Jul 28 12:32:46 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/dl/cptr.c (rb_dlptr_s_to_ptr): use rb_check_funcall.
 
 	* ext/dl/cptr.c (rb_dlptr_s_to_ptr): fix wrapping condition.
 
